<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refreshiicon"
        app:showAsAction="always|collapseActionView"
        android:title=""
        ></item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title=""
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        ></item>
    <item
        android:id="@+id/more"
        android:icon="@drawable/moreiconn"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user"
                android:icon="@drawable/usericon"
                android:title="@string/user" />
            <item
                android:id="@+id/aboutus"
                android:icon="@drawable/about"
                android:title="@string/AboutUs" />

            <item
                android:id="@+id/nightmode"
                android:icon="@drawable/nightmode"
                android:title="@string/NightMode" />
            <item
                android:id="@+id/language"
                android:icon="@drawable/language"
                android:title="@string/Language" />
        </menu>
    </item>
</menu>


